[tool.poetry]
name = "fetchai-babble"
version = "0.4.2"
description = "A simple python library for interacting with the Fetch.ai messaging service (called Memorandum)"
authors = ["Fetch.AI Limited"]
license = "Apache 2.0"
readme = "README.md"
packages = [{ include = "babble", from = "src" }]


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
ecdsa = "^0.19.0"
requests = "^2.32.3"
bech32 = "^1.2.0"
pycryptodome = "^3.20.0"
pyjwt = "^2.8.0"
eciespy = "^0.4.2"
pydantic = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
tomli = "^2.0.1"
ruff = "^0.4.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
