[tool.poetry]
name = "fetchai-babble"
version = "0.4.3"
description = "A simple python library for interacting with the Fetch.ai messaging service (called Memorandum)"
authors = ["Fetch.AI Limited"]
license = "Apache 2.0"
readme = "README.md"
packages = [{ include = "babble", from = "src" }]


[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pydantic = ">=2.8,<3.0"
pydantic-core = "^2.31.1"
ecdsa = "^0.19.0"
requests = "^2.32.3"
bech32 = "^1.2.0"
pycryptodome = "^3.21.0"
pyjwt = "^2.10.1"
eciespy = "^0.4.4"
cffi = "^1.17.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
tomli = "^2.0.1"
ruff = "^0.9.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
